src/mobile-styling/about.css
.about-me-container {
  width: 100%;
  flex-direction: column;
  align-items: center;
}

.about-me-container > h2 {
  color: #161e34;
}

.info-and-resume {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #1b2e50;
  text-align: center;
  border-radius: 10px;
  width: 80%;
  color: white;
  margin: auto;
  padding: 10px 2%;
}

.info-and-resume > a {
  text-decoration: none;
  background-color: #2c7758;
  border: none;
  border-radius: 5px;
  padding: 10px 25px 10px 5px;
  color: white;
  font-weight: bold;
  background-image: url('../assets/download_bg.png');
  background-repeat: no-repeat;
  background-size: 15px;
  background-position: 95%;
}

/* contact */

.contact-container,
.form-container {
  width: 100%;
  flex-direction: column;
  align-items: center;
  background: #1b2e50;
  border-radius: 30% 0 30% 0;
}

.contact-header {
  color: white;
  text-align: center;
  width: 80%;
  border-radius: 8px;
  font-size: 1.2rem;
  margin: 0 auto 20px auto;
}

.contact-container > h2 {
  color: white;
}

.form-container > .input {
  margin: 5px 0;
  width: 80%;
  border-radius: 5px;
  border: 1px solid gray;
  padding: 5px 10px;
}

.input-name,
.input-email {
  height: 30px;
  font-size: 1.2rem;
  font-weight: bold;
}

.input-message {
  padding: 15px 10px;
  height: 140px;
  font-weight: bold;
}

.button-submit {
  background-color: #2c7758;
  border: none;
  margin-top: 20px;
  border-radius: 5px;
  padding: 15px 10px;
  color: white;
  font-weight: bold;
}

.last-seperator {
  margin-bottom: 10px;
  background-color: #e5e5e5;
}

